nav bar gap fixed

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,9 +8,6 @@
   font-family: 'Ubuntu', sans-serif;
 }
 
-body {
-  margin-left: 2%;
-}
 
 nav {
   width: 100vw;
